<resources>
    <string name="app_name">Imc Calculator</string>
    <string name="text_hint_weight">Digite o seu peso ex: 60.5</string>
    <string name="text_hint_height">Digite a sua altura ex: 1.75</string>
    <string name="text_main_information">Digite o \".\" para casas decimais</string>
    <string name="btn_calc_text">Calcular IMC</string>
    <string name="logo_content_description">Logo ICM Calculadora</string>
    <string name="image_result">imagem do resultado</string>
    <string name="result_wieght">Peso informado 0 KG</string>
    <string name="result_height">Altura informada 0 m</string>
    <string name="diagnosis">diagóstoco</string>
    <string name="text_height_wieght">Digite o peso e altura</string>
    <string name="btn_back">Voltar</string>
</resources>